[gd_scene load_steps=13 format=2]

[ext_resource path="res://SNES - Star Fox - Astroid Belt.png" type="Texture" id=1]
[ext_resource path="res://PlayerMapPosition.gd" type="Script" id=2]
[ext_resource path="res://GUIElements/PlayerIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Map.gd" type="Script" id=4]
[ext_resource path="res://Shaders/starfield.shader" type="Shader" id=5]
[ext_resource path="res://GUIGraphics/grid.png" type="Texture" id=6]
[ext_resource path="res://Shaders/CRT.shader" type="Shader" id=7]
[ext_resource path="res://Node2D.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/octaves = 32
shader_param/viewport_size = Vector2( 250, 250 )
shader_param/x_offset = 0.0

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 28.287, 175.235, 6.60712, 33.9795, -6.60712, -33.9795, 314, 173.056, -7.07906, 60.408, 7.07906, -60.408, 18, 149.056, 13.6862, 92.0277, -13.6862, -92.0277, 322, 61.0561, 45.6257, 92.2576, -45.6257, -92.2576, 18, 85.0561, 0, 0, 0, 0, 306, -58.9439 )
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/boost = 1.71
shader_param/grille_opacity = 0.85
shader_param/scanlines_opacity = 0.95
shader_param/vignette_opacity = 0.24
shader_param/scanlines_speed = 0.2
shader_param/show_grille = false
shader_param/show_scanlines = true
shader_param/show_vignette = true
shader_param/show_curvature = false
shader_param/screen_size = Vector2( 310, 272 )
shader_param/aberration_amount = 0.0
shader_param/move_aberration = true
shader_param/aberration_speed = 0.01

[node name="Map" type="Control"]
anchor_right = 0.312
anchor_bottom = 0.453
margin_right = 0.511993
margin_bottom = 0.199982
rect_min_size = Vector2( 320, 272 )
rect_clip_content = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -31.6994
margin_top = -33.6289
margin_right = 337.301
margin_bottom = 335.371
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapBG" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 320.0
margin_bottom = 272.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridLines" type="TextureRect" parent="."]
modulate = Color( 0.0941176, 0.541176, 0.0156863, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Path2D" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.701961 )
material = SubResource( 2 )
position = Vector2( -10, 66.9439 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 28.287, 175.235 )
rotation = 0.105546

[node name="PlayerMapPosition" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
remote_path = NodePath("../../../PlayerIcon")
script = ExtResource( 2 )
Path = NodePath("..")

[node name="PlayerIcon" parent="." instance=ExtResource( 3 )]
position = Vector2( 18.287, 242.179 )
rotation = 0.105546

[node name="ScreenEffect" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="draw_line" from="Path2D/PathFollow2D/PlayerMapPosition" to="." method="_on_PlayerMapPosition_draw_line"]
